feat(resource-check): new auth endpoint
